 * #963 (VisualTest_DrawHistogram sometimes has overlapping X labels)
 * #964 (Study does not load LogNormalMuSigma variables from XML)
 * #965 (A RandomVector from a RandomVector can make OT crash)
 * #968 (Empty legend make OT crash)
 * #970 (Composing gaussian copulas can crash the chaos)
 * #972 (FittingTest::ChiSquared slow and buggy)

== 1.11 release (2018-05-11) == #release-1.11

=== Library ===

==== Major changes ====

==== New classes ====
 * FrechetFactory
 * Fehlberg
 * TranslationFunction
 * DomainComplement, DomainIntersection, DomainUnion, DomainDisjunctiveUnion, DomainDifference
 * SmoothedUniform
 * NearestNeighbourAlgorithm, RegularGridNearestNeighbour, NaiveNearestNeighbour, NearestNeighbour1D
 * EnclosingSimplex, EnclosingSimplexImplementation, NaiveEnclosingSimplex, RegularGridEnclosingSimplex, EnclosingSimplexMonotonic1D, BoundingVolumeHierarchy
 * IndicesCollection
 * SymbolicParserExprTk
 * EvaluationProxy
 * MemoizeFunction, MemoizeEvaluation
 * Evaluation, Gradient, Hessian
 * MeshDomain
 * NormInfEnumerateFunction
 * FunctionalChaosSobolIndices
 * P1LagrangeInterpolation
 * FilonQuadrature

==== API changes ====
 * Removed deprecated NumericalMathFunction class
 * Removed deprecated QuadraticNumericalMathFunction class
 * Removed deprecated LinearNumericalMathFunction class
 * Removed deprecated NumericalSample class
 * Removed deprecated NumericalPoint[WithDescription] class
 * Removed deprecated NumericalScalarCollection class
 * Removed deprecated NumericalComplexCollection class
 * Removed deprecated PosteriorRandomVector class
 * Removed deprecated ConditionedNormalProcess class
 * Removed deprecated ResourceMap::[SG]AsNumericalScalar methods
 * Removed deprecated SpecFunc::*NumericalScalar* constants
 * Removed deprecated PlatformInfo::GetConfigureCommandLine method
 * Removed deprecated Field::getSample method
 * Removed deprecated SobolIndicesAlgorithm::Generate method
 * Removed deprecated NumericalScalar, NumericalComplex types